# clane

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  NEWS  README.md  bootstrap  clane_ascii.hpp  clane_http_file.cpp  clane_http_parse.cpp  clane_http_route.cpp  clane_http_server.cpp  clane_mime.cpp  clane_mime.hpp  clane_net_event.cpp  clane_net_event.hpp  clane_net_inet.cpp  clane_net_poller.cpp  clane_net_poller.hpp  clane_net_socket.hpp  clane_posix_fd.cpp  clane_posix_fd.hpp  clane_sync_wait_group.cpp  clane_uri.cpp  clane_uri.hpp  configure.ac  release-checklist.txt
OLD/src/: CMakeLists.txt  clane.cxx  clane.hpp
OLD/src/http/: clane_http_message.hxx  clane_http_server.hpp  clane_http_server.hxx  clane_http_server.ipp
OLD/src/uri/: clane_uri.hxx
examples/: Makefile.am
examples/ajax/: Makefile.am  ajax.cpp  index.html  main.css
examples/file_server/: file_server.cpp
src/: CMakeLists.txt  Makefile.am  check.h  clane.hpp  clane_base.hpp  clane_common.hpp  clane_event.cpp  clane_event.hpp  clane_http.cpp  clane_http.hpp  clane_http_header.cpp  clane_http_header.hpp  clane_http_request.cpp  clane_http_request.hpp  clane_http_server.cpp  clane_http_server.hpp  clane_inet.cpp  clane_inet.hpp  clane_main.cpp  clane_poll.cpp  clane_poll.hpp  clane_posix.cpp  clane_posix.hpp  clane_socket.cpp  clane_socket.hpp  clane_uri_impl.cpp  leak_check
src/ascii/: clane_ascii.hpp  clane_ascii.hxx  clane_ascii_impl.hpp
src/ascii/tests/: CMakeLists.txt  check_ascii_find_newline.cpp  check_ascii_has_prefix.cpp  check_ascii_has_prefix.cxx  check_ascii_hexch_to_int.cpp  check_ascii_hexch_to_int.cxx  check_ascii_icase_compare.cpp  check_ascii_icase_compare.cxx  check_ascii_int_to_hexch.cpp  check_ascii_int_to_hexch.cxx  check_ascii_rtrim.cpp
src/check/: CMakeLists.txt  Makefile.am  check.cpp  check.h  clane_check.cxx  clane_check.hxx
src/http/: CMakeLists.txt  Makefile.am  clane_http_client.cpp  clane_http_client.hpp  clane_http_file.cpp  clane_http_file.hpp  clane_http_header.cxx  clane_http_header.hxx  clane_http_message.cpp  clane_http_message.cxx  clane_http_message.hpp  clane_http_message.hxx  clane_http_parse.cpp  clane_http_parse.hpp  clane_http_prefix_stripper.hpp  clane_http_route.hpp  clane_http_server.cpp  clane_http_server.cxx  clane_http_server.hpp  http.cpp  http.h  http_common.cpp  http_common.h  http_common.hpp  http_consume.cpp  http_consume.hpp  http_consumer.cpp  http_consumer.h  http_header.cpp  http_header.h  http_header.hpp  http_message.cpp  http_message.h  http_message.hpp  http_parse.cpp  http_parse.h  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  (+6 more)
src/http-old/: Makefile.am  http.cpp  http.h  http_common.h  http_header.h  http_parse.cpp  http_parse.h  http_request.cpp  http_request.h  http_server.cpp  http_server.h  http_status.cpp  http_status.h
src/http-old/tests/: Makefile.am  check_find_newline.cpp  check_header_map_compare.cpp  check_header_name_less.cpp  check_is_header_name_valid.cpp  check_is_header_value_valid.cpp  check_is_method_valid.cpp  check_parse_headers.cpp  check_parse_request_line.cpp  check_rtrim.cpp  parse.cpp  parse.h
src/http/tests/: .gitignore  CMakeLists.txt  Makefile.am  check_canonize_1x_header_name.cpp  check_chunk_line_consumer.cpp  check_consumer.cpp  check_find_newline.cpp  check_header_map_compare.cpp  check_header_name_less.cpp  check_headers_consumer.cpp  check_headers_parser.cpp  check_http_canonize_1x_header_name.cpp  check_http_default_error_handler.cpp  check_http_file_server.cpp  check_http_header_map.cpp  check_http_header_map.cxx  check_http_is_header_value_valid.cpp  check_http_is_method.cpp  check_http_is_method.cxx  check_http_is_method_valid.cpp  check_http_is_text.cxx  check_http_parse_chunk_size.cxx  check_http_parse_http_version.cpp  check_http_parse_line.cpp  (+54 more)
src/mime/: clane_mime.hpp
src/net/: Makefile.am  clane_net_connbuf.cpp  clane_net_connbuf.hpp  clane_net_error.hpp  clane_net_event.hpp  clane_net_inet.cpp  clane_net_inet.hpp  clane_net_poller.hpp  clane_net_socket.hpp  clane_uri.cxx  clane_uri.hpp  clane_uri.hxx  net.cpp  net.h  net_common.cpp  net_common.h  net_common.hpp  net_conn.cpp  net_conn.h  net_error.cpp  net_error.h  net_event.cpp  net_event.hpp  net_fd.cpp  net_fd.h  net_inet.cpp  net_inet.h  net_inet.hpp  net_ip.cpp  net_ip.h  net_mux.cpp  net_mux.h  net_poll.cpp  net_poll.hpp  net_posix.cpp  net_posix.hpp  net_signal.cpp  net_signal.h  net_socket.cpp  net_socket.h  (+1 more)
src/posix/: clane_posix_fd.hpp
src/string/: clane_vstring.hxx
src/sync/: clane_sync_wait_group.hpp
src/tests/: CMakeLists.txt  Makefile.am  check_event.cpp  check_http_header_name_less.cpp  check_http_server_run_term.cpp  check_parse_line.cpp  check_posix_errno_to_string.cpp  check_posix_fd.cpp  check_server.cpp  check_tcp_connect_accept.cpp
src/uri/: CMakeLists.txt  Makefile.am  clane_uri.cxx  clane_uri.hpp  clane_uri.hxx  clane_uri_impl.cpp  clane_uri_impl.hpp  clane_uri_parse.cpp  clane_uri_parse.hpp  clane_uri_uri.cpp  clane_uri_uri.hpp  uri.cpp  uri.h  uri.hpp
tests/: Makefile.am  check_http_canonize_1x_header_name.cpp  check_http_is_header_name_valid.cpp  check_http_prefix_stripper.cpp  check_http_request_response.cpp  check_http_router.cpp  check_http_serve_file.cpp  check_http_server_content_length_response.cpp  check_http_server_error_response.cpp  check_http_server_term_then_run.cpp  check_http_status_code.cpp  check_http_v1x_body_incparser.cpp  check_http_v1x_headers_incparser.cpp  check_http_v1x_request_incparser.cpp  check_http_v1x_response_incparser.cpp  check_http_v1x_status_line_incparser.cpp  check_net_poll_event.cpp  check_net_tcp_connect_accept_nb.cpp  check_parse_uri_reference.cpp  check_posix_unique_fd.cpp  check_sync_wait_group.cpp  check_uri_is_ipv4_address.cpp  check_uri_is_ls32.cpp  check_uri_is_query.cpp  check_uri_is_userinfo.cpp  check_uri_percent_decode.cpp  check_uri_percent_encode.cpp  check_uri_remove_dot_segments.cpp  check_uri_remove_last_path_segment.cpp  check_uri_to_string.cpp  check_uri_validate.cpp  clane_check.hpp  clane_http_v1x_response.hpp
(+246 files in other folders)
