AC_PREREQ([2.68])
AC_INIT([clane], [refactor], [c.m.brandenburg@gmail.com], [https://github.com/cmbrandenburg/clane])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AM_SILENT_RULES([yes])
AC_CONFIG_MACRO_DIR([m4])
AM_CONFIG_HEADER(clane_config.h)

AC_PROG_CXX()
LT_PREREQ([2.4.2])
LT_INIT()

#AX_CXX_COMPILE_STDCXX_14(noext, mandatory)

AC_OUTPUT([Makefile])
